# Inverse-Kinematics-with-Skinning

./: .gitignore  ADOLCExample.cpp  EigenSolveExample.cpp  FK.cpp  FK.h  IK.cpp  IK.h  Makefile  README.md  driver.cpp  minivectorTemplate.h  run.sh  skeletonRenderer.cpp  skeletonRenderer.h  skinning.cpp  skinning.h
adolc/Win64/include/adolc/drivers/: Makefile.am  drivers.h  odedrivers.h  taylor.h
adolc/Win64/lib/: adolc.lib
adolc/sourceCode/: Makefile  Makefile 2  Makefile.in  aclocal.m4  adolclib.pc  config.status  configure  libtool
adolc/sourceCode/ADOL-C/: Makefile  Makefile.in  dummy.lo  (+1 more)
armadillo/: armadillo.mtl  cameraPosition.txt  jointConfig.txt  jointHierarchy.txt  jointRestTransforms.txt  jointWeights.txt  run.sh  skin.config
dragon/: dragon.mtl  jointHierarchy.txt  jointRestTransforms.txt  skin.config
hand/: LICENSE  hand.mtl  jointHierarchy.txt  jointRestTransforms.txt  jointWeights.txt  skin.config
vega/: averagingBuffer.cpp  averagingBuffer.h  basicAlgorithms.h  camera.cpp  camera.h  cameraLighting.cpp  cameraLighting.h  configFile.cpp  configFile.h  containerHelper.h  graphSearchAlgorithms.h  handleControl.cpp  handleControl.h  handleRender.cpp  handleRender.h  inputDevice.cpp  inputDevice.h  lighting.cpp  lighting.h  listIO.cpp  listIO.h  macros.h  mat3d.cpp  mat3d.h  mat4d.cpp  mat4d.h  matrixIO.cpp  matrixIO.h  matrixMacros.h  objMesh.cpp  objMesh.h  objMeshRender.cpp  objMeshRender.h  openGLHelper.cpp  openGLHelper.h  sceneObject.cpp  sceneObject.h  sceneObjectDeformable.cpp  sceneObjectDeformable.h  sceneObjectWithRestPosition.cpp  (+6 more)
(+217 files in other folders)
