##############################################################################
## Makefile.am -- Process this file with automake to produce Makefile.in
## Revision: $Id: Makefile.am 639 2015-12-02 10:48:01Z kulshres $
##
## Copyright (C)  Andrea Walther, Andreas Kowarz, Kshitij Kulshreshta
##
## This file is part of ADOL-C. This software is provided as open source.
## Any use, reproduction, or distribution of the software constitutes 
## recipient's acceptance of the terms of the accompanying license file.
## 
##############################################################################

libdriversincludedir      = $(pkgincludedir)/drivers

libdriversinclude_HEADERS = drivers.h odedrivers.h psdrivers.h taylor.h

